ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation for VPC'

Resources: 
# My VPC(name of the VPC created)
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

# Public subnet in 1st AZ for MyVPC 
  PublicSubnet1AZ:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1AZ

# App private subnet in 1st AZ for MyVPC
  AppPrivateSubnet1AZ:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppPrivateSubnet1AZ

# Database private subnet in 1st AZ for MyVPC
  DataPrivateSubnet1AZ:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.3.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: DataPrivateSubnet1AZ 
         
# Public subnet in 2nd AZ for MyVPC
  PublicSubnet2AZ:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet2AZ

# App private subnet in 2nd AZ for MyVPC
  AppPrivateSubnet2AZ:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.5.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: AppPrivateSubnet2AZ

 # Database private subnet in 2nd AZ for MyVPC
  DataPrivateSubnet2AZ:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.6.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: DataPrivateSubnet2AZ    

 # Internet Gateway IGW  
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway' 
    Properties:
      Tags:
        - Key: Name
          Value: MyVPC-IGW       

# Attach Gateway
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway  

# Route Table
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
      Tags:
      - Key: Name
        Value: PublicRouteTable

# Public Route
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

# Public Subnet Association
  PublicSubnet1AZRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1AZ
      RouteTableId: !Ref PublicRouteTable

# Application Load Balancer
  MyLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties: 
      Subnets:
        - !Ref PublicSubnet1AZ
        - !Ref PublicSubnet2AZ   
      SecurityGroups:
        - !Ref WebServerSecurityGroup

# Target Group for ALB
  MyTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      VpcId: !Ref MyVPC
      Port: 80
      Protocol: 'HTTP'
      Targets:
        - Id: !Ref WebServerInstance1AZ
        - Id: !Ref WebServerInstance2AZ


# Listener For ALB
  MyListener: 
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: 'forward'
          TargetGroupArn: !Ref MyTargetGroup
      LoadBalancerArn: !Ref MyLoadBalancer
      Port: 80
      Protocol: 'HTTP'

# Web server and ALB Security Group
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable HTTP access'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'      

# WebServerInstance1AZ
  WebServerInstance1AZ:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      ImageId: ami-06d753822bd94c64e
      SubnetId: !Ref PublicSubnet1AZ
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: 'Name'
          Value: 'WebServerInstance1AZ'
      UserData:
        Fn::Base64: !Sub | 
          #!/bin/bash
          yum install -y httpd
          systemctl start https
          systemctl enable httpd
          echo "Hello from My Web Server 1A" > /var/www/html/index.html

# WebServerInstance2AZ
  WebServerInstance2AZ:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      ImageId: ami-06d753822bd94c64e
      SubnetId: !Ref PublicSubnet2AZ
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: 'Name'
          Value: 'WebServerInstance2AZ'
      UserData:
        Fn::Base64: !Sub | 
          #!/bin/bash
          yum install -y httpd
          systemctl start https
          systemctl enable httpd
          echo "Hello from My Web Server 2A" > /var/www/html/index.html
